# TerrainDreamer

./: .gitignore  README.md  requirements.txt  run_auto.sh
.claude/: settings.local.json
docs/: HARDWARE_SETUP.md
ros_ws/src/terrain_dreamer_bringup/: CMakeLists.txt  package.xml
ros_ws/src/terrain_dreamer_bringup/launch/: moon_jackal.launch
ros_ws/src/terrain_dreamer_bringup/scripts/: generate_heightmaps.py  generate_worlds.py
ros_ws/src/terrain_dreamer_bringup/urdf/: jackal_vlp32.urdf.xacro
ros_ws/src/terrain_dreamer_bringup/worlds/heightmaps/: metadata.yaml
scripts/: train_dreamer_auto.py
src/terrain_dreamer/: __init__.py
src/terrain_dreamer/envs/: ros_jackal_env.py
src/terrain_dreamer/envs/sensors/: imu_driver.py  sensor_fusion.py  velodyne_vlp32.py
src/terrain_dreamer/preprocessing/: point_cloud_processor.py  terrain_encoder.py
src/terrain_dreamer/training/: dreamer_buffer.py  performance_monitor.py
src/terrain_dreamer/world_model/: dreamer_policy.py  rssm.py  terrain_dreamer_model.py
